# ResearchOS

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md
AI-Gateway/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  test_model.py
AI-Gateway/app/: config.py  logger.py  main.py  observability.py  settings.py  test_application_factory.py  test_backup_restore_contract.py  test_hostinger_deployment_contract.py  test_hostinger_security_contract.py  test_local_bootstrap.py  test_local_continuity.py  test_local_database_archive_contract.py  test_production_registry_contract.py  test_public_api_tunnel_contract.py  test_recovery_coverage_matrix.py  test_release_contract.py  test_restore_drill_controller.py  test_restore_drill_coordination.py  test_restore_drill_foundation.py  test_restore_drill_schedule_gate.py  test_restore_drill_task_contract.py  test_restore_evidence_admission.py  test_tiered_storage_contract.py
AI-Gateway/app/architecture/: __init__.py  authentication.py  class_extractor.py  graph_builder.py  import_extractor.py  node_collector.py  parser.py  persistence.py  pipeline_service.py  scanner.py  schema.py  symbol_extractor.py  visitor.py
AI-Gateway/app/architecture/governance/: __init__.py  arc_generator.py  arc_publisher.py  compliance_engine.py  dependency_validator.py  law_registry.py  law_resolution.py  namespace_validator.py  public_api_validator.py  review_engine.py  validator.py  validator_registry.py
AI-Gateway/app/architecture/models/: __init__.py  arc_package.py  architecture_artifact.py  architecture_edge.py  architecture_fact.py  architecture_graph.py  architecture_inventory.py  architecture_law.py  architecture_law_bundle.py  architecture_node.py  architecture_symbol.py  architecture_validation_result.py  architecture_violation.py  law_resolution_result.py  law_scope.py  law_severity.py  review_session.py  review_status.py  validation_report.py  (+1 more)
AI-Gateway/app/infrastructure/: database.py  readiness.py  test_readiness.py
AI-Gateway/app/kernel/: __init__.py
AI-Gateway/app/knowledge/: __init__.py  authentication.py  consequential_controls.py  ingestion_pipeline.py  models.py  object_translation.py  repository_service.py  service.py  theory_pipeline.py
AI-Gateway/app/models/: architecture.py  chat.py  consequential.py  knowledge.py  response.py
AI-Gateway/app/product/: __init__.py  intelligence.py  operational_status.py  restore_attestation.py  sessions.py  static_cache.py  storage_tiers.py  test_operational_status.py  test_recovery_status.py  test_restore_attestation.py  test_static_cache.py  test_storage_tiers.py
AI-Gateway/app/router/: administration.py  architecture.py  chat.py  chat_sse.py  chat_stream.py  consequential.py  knowledge.py  knowledge_dependencies.py  knowledge_workspace.py  session.py  workspace.py
AI-Gateway/app/runtime/: README.md  __init__.py  metrics.py  metrics_collector.py  response_normalizer.py  retry_policy.py
AI-Gateway/app/services/: ollama.py
AI-Gateway/app/workers/: __init__.py  main.py  metrics.py  test_metrics.py  test_worker_lifecycle.py
AI-Gateway/tests/manual/: test_modeling_execution_context.py  test_theory.py
(+511 files in other folders)
