[project]
name = "researchos-ai-gateway"
version = "0.3.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "reportlab==4.4.9",
    "sse-starlette==3.4.5",
    "uvicorn==0.50.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "pytest-asyncio==1.4.0",
    "pypdf==6.13.3",
    "pip-audit==2.10.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["logs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["app"]
python_files = ["test_*.py"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
omit = ["app/architecture/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
